[gd_scene load_steps=12 format=3 uid="uid://c4q3jhysfvqwq"]

[ext_resource type="Texture2D" uid="uid://cbgctaihplw5u" path="res://tiles_pic/conwaytiles.png" id="2_l56o7"]
[ext_resource type="Texture2D" uid="uid://cskd66knv8pmw" path="res://tiles_pic/redbug.png" id="3_t4cku"]
[ext_resource type="Texture2D" uid="uid://dcleaqi36skfb" path="res://tiles_pic/black_border.png" id="4_ukpnc"]
[ext_resource type="Texture2D" uid="uid://dg11ltelt4iau" path="res://tiles_pic/blue_border.png" id="5_y6ott"]
[ext_resource type="Script" path="res://dev/tile_map_layer.gd" id="6_1q8ok"]
[ext_resource type="PackedScene" uid="uid://bkwqwg5g0ytwr" path="res://scenes/menu_button.tscn" id="6_cnpt1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pg41j"]
texture = ExtResource("2_l56o7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/next_alternative_id = 3
15:2/0 = 0
15:2/1 = 1
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/next_alternative_id = 2
5:3/0 = 0
5:3/1 = 1
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gr3xa"]
texture = ExtResource("3_t4cku")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/1 = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o5y0m"]
texture = ExtResource("4_ukpnc")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fenog"]
texture = ExtResource("5_y6ott")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/1 = 1

[sub_resource type="TileSet" id="TileSet_3t3n6"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_pg41j")
sources/1 = SubResource("TileSetAtlasSource_gr3xa")
sources/2 = SubResource("TileSetAtlasSource_o5y0m")
sources/3 = SubResource("TileSetAtlasSource_fenog")

[node name="Game" type="Node2D"]
script = ExtResource("6_1q8ok")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_3t3n6")

[node name="Camera2D" type="Camera2D" parent="TileMapLayer"]
position = Vector2(0, -96)
limit_left = 0
limit_top = -96
limit_right = 2560
limit_bottom = 2560

[node name="dragzone" type="Control" parent="TileMapLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1279.0
offset_bottom = 579.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = -93.0
offset_right = 1277.0
offset_bottom = 4.0
metadata/_edit_use_anchors_ = true

[node name="HSlider" type="HSlider" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -918.0
offset_top = 11.0
offset_right = -650.0
offset_bottom = 27.0
grow_horizontal = 0
tooltip_text = "speed of the simulation"
min_value = 1.0
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00860047
anchor_top = 0.0206186
anchor_right = 0.176701
anchor_bottom = 0.43299
grow_horizontal = 2
theme_override_constants/separation = 50
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
toggle_mode = true
action_mode = 0
text = "  PLAY   "

[node name="Button2" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "DELETE ALL"

[node name="MenuButton" parent="Control" instance=ExtResource("6_cnpt1")]
layout_mode = 0
offset_left = 725.0
offset_top = -2.0
offset_right = 817.0
offset_bottom = 29.0
button_mask = 3

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
stretch_mode = 2

[node name="Manage" type="Button" parent="."]
offset_left = 925.0
offset_top = -95.0
offset_right = 996.0
offset_bottom = -64.0
text = "manage patterns"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="value_changed" from="Control/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="Control/HBoxContainer/Button" to="." method="_on_button_toggled"]
[connection signal="toggled" from="Control/HBoxContainer/Button2" to="." method="_on_delete_all"]
[connection signal="pressed" from="Manage" to="." method="_on_manage_pressed"]
